@@ -38,17 +38,17 @@ public class ParticipantController {
     private SubmissionRepository submissionRepository;
 
     @Autowired
-    private UserRepository userRepository; // ✅ Inject UserRepository
+    private UserRepository userRepository;
 
     @GetMapping("/dashboard")
     public String participantDashboard(Model model) {
         logger.debug("Loading participant dashboard for user");
         try {
             List<Quiz> availableQuizzes = quizRepository.findAll();
-            model.addAttribute("quizzes", availableQuizzes != null ? availableQuizzes : List.of());
+            model.addAttribute("quizzes", availableQuizzes != null ? availableQuizzes : Collections.emptyList());
             return "participant/dashboard";
         } catch (Exception e) {
-            logger.error("Failed to load participant dashboard: {}", e.getMessage());
+            logger.error("Failed to load participant dashboard: {}", e.getMessage(), e); // Log full stack trace
             model.addAttribute("error", "Unable to load dashboard. Please try again.");
             return "participant/dashboard";
         }
@@ -60,16 +60,27 @@ public class ParticipantController {
         Quiz quiz = quizRepository.findById(id).orElse(null);
         if (quiz == null) {
             logger.warn("Quiz not found for id: {}", id);
-            model.addAttribute("error", "Quiz not found.");
+            model.addAttribute("error", "Quiz not found with ID: " + id);
             return "redirect:/participant/dashboard";
         }
         try {
+            List<Question> questions = questionRepository.findByQuizId(id);
+            if (questions == null) {
+                logger.error("QuestionRepository returned null for quiz id: {}", id);
+                model.addAttribute("error", "Internal error loading questions.");
+                return "redirect:/participant/dashboard";
+            }
+            if (questions.isEmpty()) {
+                logger.warn("No questions found for quiz id: {}", id);
+                model.addAttribute("error", "No questions available for this quiz.");
+                return "redirect:/participant/dashboard";
+            }
             model.addAttribute("quiz", quiz);
-            model.addAttribute("questions", questionRepository.findByQuizId(id));
-            return "/participant/quiz-play";
+            model.addAttribute("questions", questions);
+            return "participant/quiz-play";
         } catch (Exception e) {
-            logger.error("Failed to load quiz with id {}: {}", id, e.getMessage());
-            model.addAttribute("error", "Unable to load quiz. Please try again.");
+            logger.error("Failed to load quiz with id {}: {}", id, e.getMessage(), e); // Log full stack trace
+            model.addAttribute("error", "Unable to load quiz. Please try again later.");
             return "redirect:/participant/dashboard";
         }
     }
@@ -99,7 +110,7 @@ public class ParticipantController {
                         logger.warn("Question ID {} not found", questionId);
                     }
                 } catch (NumberFormatException e) {
-                    logger.warn("Invalid question ID format: {}", key, e);
+                    logger.warn("Invalid question ID format: {}, error: {}", key, e.getMessage());
                 }
             }
         });
@@ -107,8 +118,18 @@ public class ParticipantController {
         List<Question> questions;
         try {
             questions = questionRepository.findByQuizId(quizId);
+            if (questions == null) {
+                logger.error("QuestionRepository returned null for quizId: {}", quizId);
+                model.addAttribute("error", "Internal error loading questions.");
+                return "redirect:/participant/dashboard";
+            }
+            if (questions.isEmpty()) {
+                logger.error("No questions found for quizId: {}", quizId);
+                model.addAttribute("error", "No questions available to score.");
+                return "redirect:/participant/dashboard";
+            }
         } catch (Exception e) {
-            logger.error("Failed to fetch questions for quizId {}: {}", quizId, e.getMessage());
+            logger.error("Failed to fetch questions for quizId {}: {}", quizId, e.getMessage(), e);
             model.addAttribute("error", "Unable to process quiz submission.");
             return "redirect:/participant/dashboard";
         }
@@ -122,25 +143,22 @@ public class ParticipantController {
             }
         }
 
-        // ✅ Save submission to database
         try {
             Submission submission = new Submission();
             submission.setQuizId(quizId);
-
-            Long userId = getUserIdFromAuth(authentication); // Corrected version
-            submission.setUserId(userId != null ? userId : 0L); // fallback
-
+            Long userId = getUserIdFromAuth(authentication);
+            submission.setUserId(userId != null ? userId : 0L); // Fallback to 0 if user not found
             submission.setScore(score);
             submission.setAttemptTime(LocalDateTime.now());
             submission.setAnswers(userAnswers.toString());
-
             submissionRepository.save(submission);
             logger.info("Submission saved for userId {}, quizId {}, score {}", userId, quizId, score);
         } catch (Exception e) {
-            logger.error("Failed to save submission: {}", e.getMessage());
+            logger.error("Failed to save submission for quizId {}: {}", quizId, e.getMessage(), e);
+            model.addAttribute("error", "Submission failed to save. Please try again.");
+            return "redirect:/participant/dashboard";
         }
 
-        // ✅ Show result page
         model.addAttribute("quiz", quiz);
         model.addAttribute("questions", questions);
         model.addAttribute("submittedAnswers", userAnswers);
@@ -151,7 +169,6 @@ public class ParticipantController {
         return "participant/result";
     }
 
-    // ✅ Extract userId from Authentication using UserRepository
     private Long getUserIdFromAuth(Authentication authentication) {
         if (authentication != null && authentication.isAuthenticated()) {
             String username = authentication.getName();
